[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nmap2json"
version = "0.0.0"
authors = [
  { name="Paul Jung", email="paul.jung@circl.lu" },
]
description = "A nmap xml output to json converter"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]
license = { text = "GNU AFFERO v3" }

[project.urls]
Homepage = "https://github.com/D4-project/nmap2json"
Tracker = "https://github.com/D4-project/nmap2json/issues"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
nmap2json = 'nmap2json:main'